2022-02-23  J Pascoe  <j_pascoe@apple.com>

        [WebAuthn] userHandle not marked nullable in _WKWebAuthenticationAssertionResponse
        https://bugs.webkit.org/show_bug.cgi?id=237043
        rdar://89317740

        Reviewed by Brent Fulgham.

        The userHandle is a nullable field on UserEntity. This patch changes
        various API/SPI to allow passing null userHandle.

        * Modules/webauthn/AuthenticatorAssertionResponse.cpp:
        (WebCore::AuthenticatorAssertionResponse::create):
        (WebCore::AuthenticatorAssertionResponse::AuthenticatorAssertionResponse):
        * Modules/webauthn/AuthenticatorAssertionResponse.h:

2022-02-23  Antti Koivisto  <antti@apple.com>

        [CSS Container Queries] offsetWidth/Height and similar should update layout for container queries
        https://bugs.webkit.org/show_bug.cgi?id=237079

        Reviewed by Simon Fraser.

        Fix

        css/css-contain/container-queries/inline-size-containment.html
        css/css-contain/container-queries/inline-size-containment-vertical-rl.html

        * dom/Document.cpp:
        (WebCore::Document::updateLayout):

        Make iterative instead of recursive.

        (WebCore::Document::updateLayoutIfDimensionsOutOfDate):

        Check for query containers.
        Call local updateLayout instead of the FrameViewLayoutContext one.

        * page/FrameView.cpp:
        (WebCore::FrameView::updateLayoutAndStyleIfNeededRecursive):
        * style/StyleScope.cpp:
        (WebCore::Style::Scope::updateQueryContainerState):

        Add protection against infinite layout/invalidation cycle with unstable layouts.

        * style/StyleScope.h:

2022-02-23  Andres Gonzalez  <andresg_22@apple.com>

        Fix for assert crash in AccessibilityRenderObject::visiblePositionForIndex.
        https://bugs.webkit.org/show_bug.cgi?id=236795
        rdar://89025180

        Reviewed by Chris Fleizach.

        Test: accessibility/native-text-control-attributed-string.html
