@@ -1,3 +1,15 @@
+2022-02-23  Alan Bujtas  <zalan@apple.com>
+
+        [IFC][Integration] LineLayout::firstInlineBoxRect should flip the rect coordinates for vertical-rl
+        https://bugs.webkit.org/show_bug.cgi?id=237036
+
+        Reviewed by Antti Koivisto and Darin Adler.
+
+        This is similar to what RenderInline::firstInlineBoxTopLeft does.
+
+        * layout/integration/LayoutIntegrationLineLayout.cpp:
+        (WebCore::LayoutIntegration::LineLayout::firstInlineBoxRect const):
+
 2022-02-23  J Pascoe  <j_pascoe@apple.com>
 
         [WebAuthn] userHandle not marked nullable in _WKWebAuthenticationAssertionResponse
